force-app/main/default/objects/eSign_API_credentials__mdt/eSign_API_credentials__mdt.object-meta.xml
<CustomObject>
    <label>eSign API credential</label>
    <pluralLabel>eSign API credentials</pluralLabel>
</CustomObject>