force-app/main/default/objects/eSign_API_credentials__mdt/fields/BusinessGUID__c.field-meta.xml
<CustomField>
    <fullName>BusinessGUID__c</fullName>
    <label>BusinessGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>