force-app/main/default/objects/eSign_API_credentials__mdt/fields/DocumentGUID__c.field-meta.xml
<CustomField>
    <fullName>DocumentGUID__c</fullName>
    <label>DocumentGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>